--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,13 +7,25 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
+
       - name: Build
         run: docker build -t abcd010/simple-web:latest .
+
       - name: Security Scan
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'abcd010/simple-web:latest'
-          exit-code: '1' # Security අවුලක් තිබුණොත් මෙතනින් නවත්වන්න
+          exit-code: '1'
           severity: 'CRITICAL,HIGH'
+
+      # 1️⃣ පියවර: මුලින්ම Image එක Minikube එකට දාන්න [cite: 2026-02-02]
+      - name: Load image to Minikube
+        run: |
+          minikube image load abcd010/simple-web:latest
+
+      # 2️⃣ පියවර: ඊට පස්සේ විතරක් Deploy කරන්න [cite: 2026-02-02]
       - name: Deploy
-        run: kubectl apply -f k8s/deployment.yaml
+        run: |
+          export KUBECONFIG=$HOME/.kube/config
+          kubectl apply -f k8s/deployment.yaml
+          kubectl rollout restart deployment web-deploy
